finifhed initial check

--- a/src/Pages/Home/Skill/Skill.css
+++ b/src/Pages/Home/Skill/Skill.css
@@ -1,5 +1,5 @@
 .skill-box{
-     background: #eee;
+     background: #F2F2F2;
      text-align: start;
      margin: 60px 0px 60px 0;
      margin-left: 18px;
