--- a/src/Pages/Home/Project/Project.css
+++ b/src/Pages/Home/Project/Project.css
@@ -6,7 +6,7 @@
 }
 .project-box:hover{
      transform: scale(1.1);
-     transition: linear .5s;
+     transition: linear .3s;
 }
 .project_title{
      font-size: 20px;
@@ -38,6 +38,7 @@
      background: #2E4049;
      color: #fff;
      border: #fff 1px solid;
-     border-radius: 10px;
+     padding: 7px 10px;
+     border-radius: 3px;
      
 }
