--- a/src/Pages/Home/Project/Project.css
+++ b/src/Pages/Home/Project/Project.css
@@ -35,7 +35,7 @@
      margin-top: 16px;
 }
 .btn-details{
-     background: #2E4049;
+     background: #171717;
      color: #fff;
      border: #fff 1px solid;
      padding: 7px 10px;
