--- a/src/Pages/Home/Skills/skills.css
+++ b/src/Pages/Home/Skills/skills.css
@@ -4,7 +4,7 @@
 }
 .skill-title{
      font-weight: 600;
-     color: #1a1a1b;
+     color: #171717;
      margin-top: 30px;
      margin-bottom: 20px;
 }
@@ -12,5 +12,5 @@
      text-align: justify;
      font-size: 16px;
      font-weight: 400;
-     color: gray;
+     color: #171717;
 }
