Okay implement the newest features

--- a/src/Pages/Home/Blogs/Blogs.css
+++ b/src/Pages/Home/Blogs/Blogs.css
@@ -1,21 +1,99 @@
-/* Font family  */
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,700;0,800;1,600;1,700;1,800&display=swap');
-/* font-family: 'EB Garamond', serif; */
+another-body{
+     margin: 0;
+     padding: 0;
+     min-height: 100vh;
+     background: #333;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-family: consolas;
+ }
+ 
+ .another-container{
+     position: relative;
+     display: flex;
+     justify-content: space-between;
+ }
+ 
+ .another-container .another-card{
+     position: relative;
+     cursor: pointer;
+ }
+ 
+ .another-container .another-card .face{
+     width: 300px;
+     height: 200px;
+     transition: 0.5s;
+ }
+ 
+ .another-container .another-card .face.face1{
+     position: relative;
+     background: #171717;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     z-index: 1;
+     transform: translateY(100px);
+ }
+ 
+ .another-container .another-card:hover .face.face1{
+     background: #171717;
+     transform: translateY(0);
+ }
+ 
+ .another-container .another-card .face.face1 .content{
+     opacity: 0.2;
+     transition: 0.5s;
+ }
+ 
+ .another-container .another-card:hover .face.face1 .content{
+     opacity: 1;
+ }
+ 
+ .another-container .another-card .face.face1 .content img{
+     max-width: 100px;
+ }
+ 
+ .another-container .another-card .face.face1 .content h3{
+     margin: 10px 0 0;
+     padding: 0;
+     color: #fff;
+     text-align: center;
+     font-size: 1.5em;
+ }
+ 
+ .another-container .another-card .face.face2{
+     position: relative;
+     background: #fff;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: 20px;
+     box-sizing: border-box;
+     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+     transform: translateY(-100px);
+ }
+ 
+ .another-container .another-card:hover .face.face2{
+     transform: translateY(0);
+ }
+ 
+ .another-container .another-card .face.face2 .content p{
+     margin: 0;
+     padding: 0;
+ }
+ 
+ .another-container .another-card .face.face2 .content a{
+     margin: 15px 0 0;
+     display:  inline-block;
+     text-decoration: none;
+     font-weight: 900;
+     color: #333;
+     padding: 5px;
 
-.blog-title{
-     font-family: 'EB Garamond', serif;
-     font-size: 40px;
-}
-.topic-title{
-     font-family: 'EB Garamond', serif;
-     font-size: 26px;
-     padding-top: 100px;
-}
-.blog-text{
-     font-family: 'EB Garamond', serif;
-     font-size: 22px;
-}
-.ul-text{
-     font-family: sans-serif;
-     font-size: 18px;
-}
+ }
+ 
+ .another-container .another-card .face.face2 .content a:hover{
+     background: #333;
+     color: #fff;
+ }
