--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -2,7 +2,7 @@
      margin-top:100px;
      padding-bottom: 60px;
      padding: 40px 0;
-     background: rgb(243, 243, 243);
+     background: #E9E2D0;
 }
 .footer-Icon{
      color: #fff;
